Estilizando os botões

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <h1>oi</h1>
-  <a href="">sdkamdkas</a>
+  <header>
+    <div class="flex gap-1">
+      <a href="#" class="btn btn-sm">Label</a>
+      <span href="#" class="btn btn-md">Label</span>
+      <button class="btn btn-lg primary">Label</button>
+    </div>
+
+    <div class="flex gap-1">
+      <a aria-label="Label" href="#" class="btn btn-sm"></a>
+      <span aria-label="Label" class="btn btn-md"></span>
+      <button aria-label="Label" class="btn btn-lg primary"></button>
+    </div>
+  </header>
 </body>
 </html>
