--- a/index.html
+++ b/index.html
@@ -13,18 +13,11 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <header>
-    <div class="flex gap-1">
-      <a href="#" class="btn btn-sm">Label</a>
-      <span href="#" class="btn btn-md">Label</span>
-      <button class="btn btn-lg primary">Label</button>
-    </div>
-
-    <div class="flex gap-1">
-      <a aria-label="Label" href="#" class="btn btn-sm"></a>
-      <span aria-label="Label" class="btn btn-md"></span>
-      <button aria-label="Label" class="btn btn-lg primary"></button>
-    </div>
+  <header class="flex gap-1">
+    <a href="#" class="social" aria-label="tiktok"></a>
+    <a href="#" class="social" aria-label="instagram"></a>
+    <a href="#" class="social" aria-label="twitter"></a>
+    <a href="#" class="social" aria-label="discord"></a>
   </header>
 </body>
 </html>
