--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
 
         <a href="#about" class="desktop-only">Conheça o app</a>
-        <a href="#feautres" class="desktop-only">Funcionalidades</a>
+        <a href="#features" class="desktop-only">Funcionalidades</a>
         <a href="#pricing" class="desktop-only">Planos e preços</a>
 
         <a href="#download" class="btn btn-sm">Baixar agora</a>
@@ -199,5 +199,60 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class="container py-xl grid">
+      <section class="grid top">
+        <img src="assets/logo.svg" alt="">
+
+        <nav class="even-columns">
+          <ul class="grid gap-1.5" role="list">
+            <li class="title">Produto</li>
+            <li>
+              <a href="#features">Funcionalidades</a>
+            </li>
+            <li>
+              <a href="#pricing">Planos e preços</a>
+            </li>
+            <li>
+              <a href="#download">Download</a>
+            </li>
+          </ul>
+
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Empresa</li>
+            <li>
+              <a href="#about">Sobre nós</a>
+            </li>
+            <li>
+              <a href="#">Trabalhe conosco</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
+          </ul>
+
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Legal</li>
+            <li>
+              <a href="#">Termos de uso</a>
+            </li>
+            <li>
+              <a href="#">Política e privacidade</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="bottom flex gap-1.5">
+        <div class="flex gap-1.5">
+          <a href="#" class="social" aria-label="tiktok"></a>
+          <a href="#" class="social" aria-label="instagram"></a>
+          <a href="#" class="social" aria-label="twitter"></a>
+          <a href="#" class="social" aria-label="discord"></a>
+        </div>
+        <span class="copy">©2024 Zingen Technologies, Inc.</span>
+      </section>
+    </div>
+  </footer>
 </body>
 </html>
